prepare the files for submission

--- a/writedown/npt-neq/reply/reply.tex
+++ b/writedown/npt-neq/reply/reply.tex
@@ -21,7 +21,12 @@
 
 Dear Editor,\\
 
-Below you find our reply to the the referees. We apologize for the long time needed for the reply due to the holiday of one of the authors.  The request of the referees implied a rather massive additional computational effort. The result of such effort is highly satisfactory and the validity of the paper is now much higher. We are now confident that the paper can be accepted for publication.\\
+Below you find our reply to the the referees. We apologize for the long time needed for the reply due to the holiday of one of the authors.
+The request of the referees implied a rather massive additional computational effort.
+The result of such effort is highly satisfactory and the validity of the paper is now much higher.
+We are now confident that the paper can be accepted for publication.
+To help the referees, we have also submitted a seperate file with all changes to the manuscript colored in red.
+\\
 
 Best Regards\\
 
