convert for submission

--- a/writedown/npt-neq/reply/reply.tex
+++ b/writedown/npt-neq/reply/reply.tex
@@ -25,7 +25,7 @@ Below you find our reply to the the referees. We apologize for the long time nee
 The request of the referees implied a rather massive additional computational effort.
 The result of such effort is highly satisfactory and the validity of the paper is now much higher.
 We are now confident that the paper can be accepted for publication.
-To help the referees, we have also submitted a seperate file with all changes to the manuscript colored in red.
+To help the referees, we have also submitted a seperate file (alanine.pdf) with all changes to the manuscript colored in red.
 \\
 
 Best Regards\\
@@ -180,7 +180,7 @@ long enough so that the results are fully converged is an always present problem
   force field but no information is given in the methods section.}\\
 
 Yes, the CMAP correction is used. We mention it in the
-section III.A. of the updated manuscript.
+section III.A (3.1). of the updated manuscript.
 \\
 
 \emph{
@@ -221,7 +221,7 @@ kinetic rate (we use joint probabilities in (6) rather than
 conditional probabilities).
 However, we prefer to stick to our definition which
 is mathematically simpler and univocal.
-A comment along this direction has been added to the end of section III.B.
+A comment along this direction has been added to the end of section III.B (3.2).
 \\
 % However, we want to stress out that, in general,
 % the probability fluxes calculated in the manuscript should not be
