--- a/writedown/npt-neq/submit.tex
+++ b/writedown/npt-neq/submit.tex
@@ -111,7 +111,7 @@
 %% be automatically moved as appropriate.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{tocentry}
-\includegraphics[height=3.6cm]{fig.ala.new/graphs/final-3.eps}
+\includegraphics[height=3.6cm]{final-3.eps}
 % Some journals require a graphical entry for the Table of Contents.
 % This should be laid out ``print ready'' so that the sizing of the
 % text is correct.
@@ -458,7 +458,7 @@ for $t \geq t_{warm}$.
 
 \begin{figure}
   \centering
-  \includegraphics[width=1.00\textwidth]{fig.ala.new/fig.all/fig-all.eps}
+  \includegraphics[width=1.00\textwidth]{fig-all.eps}
   % \raisebox{0.2\height}{\includegraphics[width=0.22\textwidth]{c-2.eps}}
   % \includegraphics[width=0.37\textwidth]{fig-begin-1.eps}
   % \includegraphics[width=0.37\textwidth]{fig-end-1.eps}
@@ -559,7 +559,7 @@ which expresses the cumulative effects due to the action of EF on the conformati
 
 \begin{figure}
   \centering
-  \includegraphics[]{fig.ala.new/fig-meta-more.eps}
+  \includegraphics[]{fig-meta-more.eps}
   \caption{The time-dependent probability of conformations $P_I(t)$ 
     when a constant EF is present, where $\sum_I P_I(t) = 1, \forall t$.
     The warm-up time is $t_{warm} = 10$~ps. The red line refers to conformation $I = \confaa$,
@@ -578,11 +578,11 @@ which expresses the cumulative effects due to the action of EF on the conformati
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-1.eps}
-  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-2.eps}
-  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-3.eps}
-  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-4.eps}
-  \includegraphics[width=0.3\textwidth]{fig.ala.new/fig-trans-010-flux-5.eps}
+  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-1.eps}
+  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-2.eps}
+  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-3.eps}
+  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-4.eps}
+  \includegraphics[width=0.3\textwidth]{fig-trans-010-flux-5.eps}
   \caption{
     The net probability flux for the constant EF case.
     The warm-up time is $t_{warm} = 10$~ps.
@@ -659,7 +659,7 @@ to the overall conformational change of the molecule as reported in
 the previous section.
 \begin{figure}
   \centering
-  \includegraphics[width=0.45\textwidth]{fig.ala.new/field.dipole/fig-dipol-order-conf.eps}
+  \includegraphics[width=0.45\textwidth]{fig-dipol-order-conf.eps}
   \caption{The
     $x$-component of the molecular dipole moment, and the orientational order parameter
     of the alanine molecule as a
@@ -821,7 +821,7 @@ alanine does not change or contribute significantly in determining the conformat
 
 \begin{figure}
   \centering
-  \includegraphics[]{fig.ala.new/fig-meta-conv.eps}
+  \includegraphics[]{fig-meta-conv.eps}
   \caption{Testing the finite-size effect on the dynamical and thermostated region.
     Probabilities of different conformations are presented versus time.
     See the text for more details.
@@ -863,8 +863,8 @@ Here we tested three different
 periods 10, 40 and 200~ps.
 \begin{figure}
   \centering
-  \includegraphics[width=0.48\textwidth]{fig.ala.new/fig-mode2-dipol.eps}
-  \includegraphics[width=0.48\textwidth]{fig.ala.new/fig-mode2-order.eps}
+  \includegraphics[width=0.48\textwidth]{fig-mode2-dipol.eps}
+  \includegraphics[width=0.48\textwidth]{fig-mode2-order.eps}
   \caption{Illustration of the effect of the oscillatory EF on the system:
     (a) the dipole moment  and (b) the
     orientational order parameter of alanine dipeptide as a
@@ -907,9 +907,9 @@ weaker than in the case of constant EF.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.32\textwidth]{fig.ala.new/fig-meta-mode2-0010.eps}
-  \includegraphics[width=0.32\textwidth]{fig.ala.new/fig-meta-mode2-0040.eps}
-  \includegraphics[width=0.32\textwidth]{fig.ala.new/fig-meta-mode2-0200.eps}
+  \includegraphics[width=0.32\textwidth]{fig-meta-mode2-0010.eps}
+  \includegraphics[width=0.32\textwidth]{fig-meta-mode2-0040.eps}
+  \includegraphics[width=0.32\textwidth]{fig-meta-mode2-0200.eps}
   % \includegraphics[width=0.49\textwidth]{fig-meta-mode2-2000.eps}
   \caption{The probability of being in a given of conformation for alanine in a   periodically oscillatory EF. Different periods,
     i.e. $\period =10$~ps, 40~ps and 200~ps, are considered here.  The
@@ -926,21 +926,21 @@ weaker than in the case of constant EF.
 
 \begin{figure}
   \centering
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-1.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-2.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-3.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-4.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0010-iflux-5.eps}\\
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-1.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-2.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-3.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-4.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0040-iflux-5.eps}\\
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-1.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-2.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-3.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-4.eps}
-  \includegraphics[width=0.19\textwidth]{fig.ala.new/fig-trans-mode2-0200-iflux-5.eps}\\
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-1.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-2.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-3.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-4.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0010-iflux-5.eps}\\
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-1.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-2.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-3.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-4.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0040-iflux-5.eps}\\
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-1.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-2.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-3.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-4.eps}
+  \includegraphics[width=0.19\textwidth]{fig-trans-mode2-0200-iflux-5.eps}\\
   \caption{
     Integrated probability flux $Q_{J,I}(t)$ for the periodically
     oscillatory EF, is plotted against time (horizontal axis, in picoseconds).
@@ -987,7 +987,7 @@ The notable increment of probability of $\confaa$ and
 are not observed in the oscillatory EF case.
 \begin{figure}
   \centering
-  \includegraphics[width=0.6\textwidth]{fig.ala.new/graphs/graph-t0010-2.eps}
+  \includegraphics[width=0.6\textwidth]{graph-t0010-2.eps}
   \caption{Schematic plot of the main probability fluxes between conformations
     for oscillatory EF, $\period =10$~ps. The thickness 
     of the arrows approximately presents the strength of the flux.
@@ -1161,8 +1161,8 @@ observation has already been reported in Ref.~\cite{ciccotti1975direct}.
 
 \begin{figure}
   \centering
-  \includegraphics{fig.ala.new/fig-corr-meta.eps}
-  \includegraphics{fig.ala.new/fig-corr-meta-c.eps}
+  \includegraphics{fig-corr-meta.eps}
+  \includegraphics{fig-corr-meta-c.eps}
   \caption{
     {The numerical result of the linear response theory.
     (a): The correlation function $\langle j(0)\cdot \chi_{\confc}(t)
